--- a/index.html
+++ b/index.html
@@ -349,10 +349,10 @@
         </div>
     </div>
 
-    <audio id="correctSound" src="https://actions.google.com/sounds/v1/cartoon/cartoon_boing.ogg" preload="auto"></audio>
+    <audio id="correctSound" src="https://a.top4top.io/m_3476ggfep1.mp3" preload="auto"></audio>
     <audio id="wrongSound" src="https://actions.google.com/sounds/v1/cartoon/cartoon_descent.ogg" preload="auto"></audio>
     <audio id="levelUpSound" src="https://actions.google.com/sounds/v1/cartoon/sci-fi_alert.ogg" preload="auto"></audio>
-    <audio id="gameOverSound" src="https://actions.google.com/sounds/v1/cartoon/cartoon_fail_strings.ogg" preload="auto"></audio>
+    <audio id="gameOverSound" src="https://b.top4top.io/m_3476wh62d2.mp3" preload="auto"></audio>
 
     <script>
         // قاعدة بيانات الكلمات المحدثة (أكثر من 1000 كلمة)
